src/components/card/card.scss
@import '../constants/colours.scss';
$border: 0.3rem solid white;
$border-radius: 1em;

.card_value {
    // border: 1px solid red;
    width: 100%;
}
.card_value--small {
    text-align: center;
}

.card_value--large {
    height: 85%;
    border-radius: 0.2em;
    font-size: 5em;
    padding-top: 55%;

    .dealCard {
        margin-top: -0.5em;
        width: 1em;
        padding-right: 0.1em;
    }
}


.card {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    appearance: none;

    height: 12em;
    min-width: 5em;
    max-width: 9em;
    border-bottom: 0;
    font-weight: bold;
    width: 30%;
    align-self: center;
    border-radius: $border-radius;
    border: $border;
    margin-top: -9em;
    margin-left: 0.1em;
    margin-right: 0.1em;
    padding: 0.5em;
    font-size: 1rem;
    box-shadow: 7px -2px 10px 1px $black-custom;
    background-repeat: no-repeat;
    background-size: 200%;

    &:focus {
        outline: none;
        margin-top: -10em;
        margin-bottom: 1em;
    }
    
    &:hover {
        margin-top: -10em;
        margin-bottom: 1em;
    }

    &--yellow {
        background-color: $yellow-light; 
        border-color: $yellow-dark;
        background-image: url('../../images/yellow_card.png');
        background-position: left;

        &:hover {
            box-shadow: inset 0 0 10px $yellow-dark, 7px -2px 10px 1px $black-custom;
        }
        &:focus {
            box-shadow: inset 0 0 10px $yellow-dark, 7px -2px 10px 1px $black-custom;
        } 
        .card_value--large {
            text-align: left;
        }
    }

    &--red {
        background-color: $red-light; 
        border-color: $red-dark;
        background-image: url('../../images/red_card.png');
        background-position: right;
        &:hover {
            box-shadow: inset 0 0 10px $red-dark, 7px -2px 10px 1px $black-custom;
        } 
        &:focus {
            box-shadow: inset 0 0 10px $red-dark, 7px -2px 10px 1px $black-custom;
        } 
        .card_value--large {
            text-align: right;
        }
    }

    &--blue {
        background-color: $blue-light;
        border-color: $blue-dark;
        background-size: 150%;
        background-position: 70%;
        background-image: url('../../images/blue_card.png');
        &:hover {
            box-shadow: inset 0 0 5px $blue-dark, 7px -2px 10px 1px $black-custom;
        }  
        &:focus {
            box-shadow: inset 0 0 5px $blue-dark, 7px -2px 10px 1px $black-custom;
        } 
        .card_value--large {
            text-align: left;
        }
    }

    &--white {
        background-color: $white-dark;
        border-color: $white-light;
        background-image: url('../../images/white_card.png');
        background-position: top;
        &:hover {
            box-shadow: inset 0 0 10px $white-light, 7px -2px 10px 1px $black-custom;
        }
        &:focus {
            box-shadow: inset 0 0 10px $white-light, 7px -2px 10px 1px $black-custom;
        }
        .card_value--large {
            text-align: left;
        }
    }

    &--purple {
        background-color: $purple-light; 
        border-color: $purple-dark;
        background-image: url('../../images/purple_card.png');
        background-position: right;
        &:hover {
            box-shadow: inset 0 0 5px $purple-dark, 7px -2px 10px 1px $black-custom;
        }  
        &:focus {
            box-shadow: inset 0 0 5px $purple-dark, 7px -2px 10px 1px $black-custom;
        } 
        .card_value--large {
            text-align: right;
        }
    }

    &--green {
        background-color: $green-light; 
        border-color: $green-dark;
        background-image: url('../../images/green_card.png');
        background-size: 150%;
        background-position: 120%;
        background-
        &:hover {
            box-shadow: inset 0 0 10px $green-dark, 7px -2px 10px 1px $black-custom;
        } 
        &:focus {
            box-shadow: inset 0 0 10px $green-dark, 7px -2px 10px 1px $black-custom;
        } 
        .card_value--large {
            text-align: right;
        }
    }

    &--selected {
        background-color: $black-custom;
        color: $white-light;
    }
}

